--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@ p {
     
 <div class="profile-card "> 
     <header>
-      <a><img src="https://github.com/AlbaCarrascoCaracuel/AlbaCarrascoCaracuel.github.io/blob/main/menu%20con%20titulo.jpg"></a>
+      <a><img src="file:///C:/Users/Alba/Desktop/Bellas%20artes/Creacion%20multimedia/Proyecto/Proyecto%20completo/medios/menu%20con%20titulo.jpg"></a>
         <!---- alt image https://cdn.pixabay.com/photo/2016/03/31/23/06/boy-1297397_1280.png --->
       <h1>Alba Carrasco</h1>
       <h2>Designer</h2>
